# cpp_happy_fun_time

./: CMakeLists.txt  README.md
class11/: CMakeLists.txt  main.cpp
class11/src/: simple_math_lib.hpp  supports.h
class11/test/: main.cpp
class11/test/unit/: mathing.cpp
src/: simple_math_lib.hpp
test/: CMakeLists.txt
